# vindinium-rage

./: .gitignore  .gitmodules  README.md
bot-zapzap/: default.nix  fetchgame.sh  ghci.sh  profile.sh  release.sh  run.sh  vindinium-zapzap.cabal
bot-zapzap/app/: Main.hs
bot-zapzap/src/: Astar.hs  Brain.hs  Voronoy.hs
bot-zipzip/: default.nix  fetchgame.sh  ghci.sh  mktags.sh  mkthrift.sh  profile.sh  release.sh  run.sh  thrift-test.py  vindinium-zipzip.cabal
bot-zipzip/lib/Data/Graph/: AStar.hs
bot-zipzip/py/: Main.py
bot-zipzip/src/: Astar.hs  Brain.hs  Main.hs  RPC.hs  Voronoy.hs
bot-zipzip/test/: Test.hs
bot-zipzip/thrift/: tf.thrift
engine/: LICENSE  default.nix  ghci.sh  vindinium-engine.cabal
engine/lib/Control/: Break.hs
engine/lib/Control/Monad/: Interrupt.hs  Rnd.hs
engine/src/: Args.hs  Cli.hs  Client.hs  Driver.hs  Driver2.hs  Imports.hs  MA.hs  Monad.hs  Perf.hs  Sigint.hs  Sim.hs  Types.hs  Util.hs
engine/src/Bot/: Random.hs
