name:                vindinium-engine
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-extensions:  FlexibleContexts, ExistentialQuantification,
                       ScopedTypeVariables, MultiWayIf, RecordWildCards,
                       OverloadedStrings, LambdaCase, Rank2Types,
                       NondecreasingIndentation, DeriveGeneric, DeriveFunctor,
                       BangPatterns, FunctionalDependencies, FlexibleInstances

  ghc-options:         -fwarn-incomplete-patterns

  build-depends:       base >=4.9 && <5.0,
                       stm,
                       mtl,
                       lens,
                       containers,
                       hashable,
                       text,
                       directory,
                       pretty-show,
                       http-client,
                       http-types,
                       aeson,
                       heap,
                       transformers,
                       time,
                       filepath,
                       bytestring,
                       unix,
                       process,
                       pqueue,
                       deepseq,
                       binary,
                       psqueues,
                       unordered-containers

  exposed-modules:     Client
                       Types
                       Imports
                       Sim
                       Monad
                       Util
                       Driver
                       Args

  hs-source-dirs:      src,lib
  default-language:    Haskell2010

